--- a/projects.html
+++ b/projects.html
@@ -3,54 +3,66 @@
 
 <head>
 	<title>Raj Lab - [Projects]</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta charset="utf-8" /> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- Local Scripts -->
-	<script src="./assets/js/jquery.min.js"></script>
-	<script src="./assets/js/skel.min.js"></script>
-	<script src="./assets/js/util.js"></script>
-	<script src="./assets/js/main.js"></script>
-
-	<!-- Bootstrap-->
-	<script src="./assets/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-	<!-- jquery -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-
-	<!--CSS-->
-	<link rel="stylesheet" href="./assets/css/main.css" />
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+
 	<!-- D3 -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
+	<!-- Local Scripts -->
+	<script src="./assets/js/jquery.min.js"></script> 
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
 	 crossorigin="anonymous">
-	<!-- React -->
-	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
-					<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js" crossorigin></script>
-					<script src="./assets/jsx/react.jsx"></script>  -->
+
+	<!--CSS-->
+	<link href="./assets/css/arrow_bounce.css" rel="stylesheet" type="text/css" />
+	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
+
+	<!-- Bootstrap-->
+	<script src="./assets/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" /> 
 </head>
 
 <body>
-	<!-- Header -->
-	<header id="header">
-		<div class="container">
-			<a class="logo" href="./index.html">
-				<img src="./icons/brain-icon.png" class="img-logo">
-				Raj Lab
+	<!-- Navbar -->
+	<nav class="nav navbar navbar-expand-lg navbar-collapse">
+			<a class="navbar-brand" href="./index.html">
+				<img src="./icons/brain-icon.png"  class="d-inline-block align-top" alt="">
+				RAJ LAB
 			</a>
-			<a href="./people.html" class="nav-link">Team</a>
-			<a href="./projects.html" class="nav-link">Projects</a>
-			<a href="./publications.html" class="nav-link">Publications</a>
-			<a href="./data.html" class="nav-link">Data/Software</a>
-			<a href="./funding.html" class="nav-link">Funding</a>
-			<a href="./joinus.html" class="nav-link">Join Us</a>
-		</div>
-	</header>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+			 aria-expanded="false" aria-label="Toggle navigation">
+				 <i class="fa fa-toggle-down"></i>  
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="./people.html">Team </a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./projects.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./publications.html">Publications / <br>Presentations</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./data.html">Data /<br>Software</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./funding.html">Funding</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./joinus.html">Join Us</a>
+					</li>
+					 
+				</ul>
+			</div>
+		</nav> 
 
 
 
