--- a/joinus.html
+++ b/joinus.html
@@ -80,12 +80,15 @@
 		</div>
 		<br>
 		<br>
-
 		<!-- Contact Us --> 
 		<div class="inner"> 
 			<h1><i class="fas fa-envelope-open"></i> Contact Us</h1>
-			
-			<form method="post" action="./assets/php/contactengine.php" id="contactUs">
+			Interested in learning more about our work? Inquiring about research positions? 
+			<br>Feel free to send us an email via the form below.
+			<br><br>
+			<iframe class="GoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSciYMVblIS4BACTcuUHmQL5JZa21w0M7NZ-9z4MHOCLu7QnYQ/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+			<!-- <form method="post" action="./assets/php/contactengine.php" id="contactUs">
 				<div class="field half first">
 					<label for="Name">Name:</label>
 					<input type="text" name="Name" id="Name" /> 
@@ -104,7 +107,7 @@
 				<ul class="actions">
 					<li><input type="submit" value="Submit" class="alt" /></li>
 				</ul>
-			</form> 
+			</form>  --> 
 		</div>
 	</section>
 
