--- a/joinus.html
+++ b/joinus.html
@@ -84,7 +84,7 @@
 		<div class="inner"> 
 			<h1><i class="fas fa-envelope-open"></i> Contact Us</h1>
 			Interested in learning more about our work? Inquiring about research positions? 
-			<br>Feel free to send us an email via the form below.
+			<br>Feel free to send us an email via the form below (addressed to Dr. Towfique Raj).
 			<br><br>
 			<iframe class="GoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSciYMVblIS4BACTcuUHmQL5JZa21w0M7NZ-9z4MHOCLu7QnYQ/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
